--- a/pharmacy.html
+++ b/pharmacy.html
@@ -30,7 +30,7 @@
   <!-- LOGIN SECTION -->
         <div class="hero-login-container">
             <div id="loginBox">
-              <h3>Login to Your Account</h3>
+              <h3>Login to Your AAccount</h3>
               <form id="loginForm" onsubmit="loginUser(event)">
                 <input type="text" id="username" placeholder="Username" required />
                 <input type="password" id="password" placeholder="Password" required />
