i added cart ,our services , contact

--- a/pharmacy.html
+++ b/pharmacy.html
@@ -13,9 +13,12 @@
        <a href="#home">Home</a> 
        <a href="#login" id="loginLink">Login</a>
       <a href="#shop">Shop</a>
+      <a href="#Add to Cart">Add to Cart</a>
       <a href="#About Us">About Us</a>
       <a href="#prescription">Upload Prescription</a>
       <a href="#consult">Consult</a>
+      <a href="#Contact Us">Contact Us</a>
+
     </nav>
   </header>
    <!-- HOME SECTION -->
@@ -30,7 +33,7 @@
   <!-- LOGIN SECTION -->
         <div class="hero-login-container">
             <div id="loginBox">
-              <h3>Login to Your AAccount</h3>
+              <h3>Login to Your Account</h3>
               <form id="loginForm" onsubmit="loginUser(event)">
                 <input type="text" id="username" placeholder="Username" required />
                 <input type="password" id="password" placeholder="Password" required />
@@ -59,32 +62,16 @@
     <input type="text" id="searchInput" placeholder="Search medicine..." onkeyup="searchMedicine()" />
     <div id="medicineList" class="medicine-list"></div>
   </section>
+  
+  <!-- CART SECTION -->
+<section id="Add to Cart" class="cart-section">
+  <h2>Your Cart</h2>
+  <div id="cartContainer"></div>
+    <button onclick="placeOrder()" id="placeOrderBtn"> Order Now</button>
+</section>
 
-  <!-- ABOUT US SECTION -->
 
-  <section id="About Us" class="about-section">
-    <h2>About Us</h2>
-    <div class="about-content">
-      
-      <h3>Our Motto:</h3>
-      <p>“Because we care about you and your health.”</p>
-
-      <h3>Who We Are:</h3>
-      <p>MeroPharma — Nepal’s probably most honest online pharmacy. 
-      We bring your medicines faster than your doctor calls back your reports.</p>
-
-      <h3>Our Aim:</h3>
-      <p>Our primary goal is simple: to get you the medicines you need, <strong>fast and reliably</strong>. We've streamlined our logistics to ensure prompt delivery right to your doorstep, because we believe access to healthcare should be simple and immediate.</p>
-
-      <h3>Our Promise:</h3>
-      <p>We provide genuine medicines, genuine doctors, and genuinely healthy smiles when your orders arrive </p>
-
-      <h3>Our Goal:</h3>
-      <p>To make healthcare simple, affordable, and maybe slightly sarcastic. 
-      Because laughter is the second-best medicine. (The first best is on our site.)</p>
-      </div>
-  </section>
-
+ 
   <!-- PRESCRIPTION UPLOAD -->
   <section id="prescription" class="prescription-section">
     <h2>Upload Your Prescription</h2>
@@ -115,6 +102,98 @@
       </div>
     </div>
   </section>
+   <!-- OUR SERVICES SECTION -->
+  <section id="services">
+    <div class="container">
+      <h2>Our Services</h2>
+      <div class="cards">
+        <div class="card">
+          <img src="https://placehold.co/80x80/007bff/ffffff?text=Pill" alt="Prescription icon" />
+          <h3>Prescription Filling</h3>
+          <p>Fast and accurate prescription filling with professional pharmacist consultation.</p>
+        </div>
+        <div class="card">
+          <img src="https://placehold.co/80x80/007bff/ffffff?text=Vaccine" alt="Vaccine icon" />
+          <h3>Vaccinations</h3>
+          <p>Administering various vaccinations, including flu shots and travel vaccines.</p>
+        </div>
+        <div class="card">
+          <img src="https://placehold.co/80x80/007bff/ffffff?text=Consult" alt="Consultation icon" />
+          <h3>Health Consultations</h3>
+          <p>Personalized health advice and medication management support.</p>
+        </div>
+        <div class="card">
+          <img src="https://placehold.co/80x80/007bff/ffffff?text=Delivery" alt="Delivery icon" />
+          <h3>Home Delivery</h3>
+          <p>Convenient home delivery service for your medications.</p>
+        </div>
+        <div class="card">
+          <img src="https://placehold.co/80x80/007bff/ffffff?text=OTC" alt="OTC icon" />
+          <h3>OTC Products</h3>
+          <p>Wide selection of over-the-counter medicines and health products.</p>
+        </div>
+        <div class="card">
+          <img src="https://placehold.co/80x80/007bff/ffffff?text=Wellness" alt="Wellness icon" />
+          <h3>Wellness Products</h3>
+          <p>Vitamins, supplements, and other wellness essentials.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+ 
+  <!-- CONTACT US SECTION -->
+  <section id="Contact Us" class="contact-section">
+    <div class="contact-container">
+      <h2 class="contact-title">Contact Us</h2>
+      <div class="contact-form">
+        <h3 class="contact-subtitle">Get in Touch</h3>
+        <form>
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" placeholder="Your Name" />
+
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Your Email" />
+
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="5" placeholder="Your Message"></textarea>
+
+          <button type="submit">Send Message</button>
+        </form>
+      </div>
+      <div class="contact-info">
+        <h3 class="contact-subtitle">Contact Details</h3>
+        <p><strong>Phone:</strong> +1 (555) 123-4567</p>
+        <p><strong>Email:</strong> info@medicarepharmacy.com</p>
+      </div>
+    </div>
+  </section>
+  <!-- ABOUT US SECTION -->
+
+  <section id="About Us" class="about-section">
+    <h2>About Us</h2>
+    <div class="about-content">
+      
+      <h3>Our Motto:</h3>
+      <p>“Because we care about you and your health.”</p>
+
+      <h3>Who We Are:</h3>
+      <p>MeroPharma — Nepal’s probably most honest online pharmacy. 
+      We bring your medicines faster than your doctor calls back your reports.</p>
+
+      <h3>Our Aim:</h3>
+      <p>Our primary goal is simple: to get you the medicines you need, <strong>fast and reliably</strong>. We've streamlined our logistics to ensure prompt delivery right to your doorstep, because we believe access to healthcare should be simple and immediate.</p>
+
+      <h3>Our Promise:</h3>
+      <p>We provide genuine medicines, genuine doctors, and genuinely healthy smiles when your orders arrive </p>
+
+      <h3>Our Goal:</h3>
+      <p>To make healthcare simple, affordable, and maybe slightly sarcastic. 
+      Because laughter is the second-best medicine. (The first best is on our site.)</p>
+      </div>
+  </section>
+
+ 
+
   <footer>
     <p>© 2025 MeroPharma. All rights reserved.</p>
   </footer>
