adjusting the about us section

--- a/pharmacy.html
+++ b/pharmacy.html
@@ -61,22 +61,31 @@
     <h2>About Us</h2>
     <div class="about-content">
       
-      <h3>Our Motto:</h3>
-      <p>“Because we care about you and your health.”</p>
+        <p>
+        MeroPharma is a modern e-pharmacy platform built to make healthcare simple, fast, and accessible for everyone.
+        Through our website, users can <strong>order genuine medicines</strong>, 
+        <strong>store their prescriptions securely</strong>, 
+        <strong>consult licensed doctors</strong>, 
+        and <strong>book appointments online</strong> without any hassle.
+        We combine technology with trusted medical support to bring essential healthcare services directly to your fingertips.
+    </p>
 
-      <h3>Who We Are:</h3>
-      <p>MeroPharma — Nepal’s probably most honest online pharmacy. 
-      We bring your medicines faster than your doctor calls back your reports.</p>
+    <h3>Our Goal</h3>
+    <p>
+        Our goal is to create a reliable digital healthcare environment where every user can access medical services easily
+        and safely. We aim to provide a seamless experience that saves time, reduces stress, and connects people to the care
+        they need—anytime, anywhere.
+    </p>
 
-      <h3>Our Aim:</h3>
-      <p>Our primary goal is simple: to get you the medicines you need, <strong>fast and reliably</strong>. We've streamlined our logistics to ensure prompt delivery right to your doorstep, because we believe access to healthcare should be simple and immediate.</p>
-
-      <h3>Our Promise:</h3>
-      <p>We provide genuine medicines, genuine doctors, and genuinely healthy smiles when your orders arrive </p>
-
-      <h3>Our Goal:</h3>
-      <p>To make healthcare simple, affordable, and maybe slightly sarcastic. 
-      Because laughter is the second-best medicine. (The first best is on our site.)</p>
+    <h3>Why Choose Us?</h3>
+    <br>
+    <ul>
+        <li><strong>Trusted & Genuine Medicines:</strong> We offer high-quality, verified medical products delivered with care.</li>
+        <li><strong>Secure Prescription Storage:</strong> Your prescriptions are stored safely and available whenever needed.</li>
+        <li><strong>Expert Doctor Consultation:</strong> Get medical advice from licensed professionals without visiting a clinic.</li>
+        <li><strong>Easy Appointment Booking:</strong> Choose your doctor and book appointments online with just a click.</li>
+        <li><strong>Fast, Safe & User-Friendly:</strong> Our platform ensures a smooth and reliable healthcare experience.</li>
+    </ul>
       </div>
   </section>
 
